@@ -5,3 +5,4 @@
 tmp/
 *.tmp
 *.code-workspace
+resource/music
