@@ -10,7 +10,7 @@ rem	(It would require a complete SFML rebuild with -MT from sources locally.)
 @echo on
 cl -DSFML_STATIC %sz_CL_FLAGS% %* %sz_src_dir%/*.cpp ^
 	-Fo%sz_out_dir%/ -Fe%sz_out_dir%/%sz_appname%.exe -Fd%sz_out_dir%/ -Fd%sz_out_dir%/ ^
-	sfml-graphics-s.lib sfml-window-s.lib sfml-system-s.lib ^
+	sfml-graphics-s.lib sfml-window-s.lib sfml-system-s.lib sfml-audio-s.lib ogg.lib vorbis.lib vorbisenc.lib vorbisfile.lib flac.lib openal32.lib ^
 	opengl32.lib freetype.lib vorbis.lib vorbisfile.lib ^
 	user32.lib kernel32.lib gdi32.lib winmm.lib advapi32.lib
 @echo off
