@@ -1,5 +1,5 @@
-﻿#include "renderer-sfml.hpp"
-#include "engine-sfml.hpp"
+﻿#include "renderer_sfml.hpp"
+#include "engine_sfml.hpp"
 
 #include <SFML/Graphics/CircleShape.hpp>
 
